--- a/src/app/modules/calendar/components/calendar-form/calendar-form.html
+++ b/src/app/modules/calendar/components/calendar-form/calendar-form.html
@@ -1,1 +1,50 @@
-<p>agenda-form works!</p>
+<h2 mat-dialog-title>New Event</h2>
+<form [formGroup]="eventForm" (ngSubmit)="saveEvent()">
+  <mat-form-field appearance="fill" class="full-width">
+    <mat-label>Title</mat-label>
+    <input matInput formControlName="title" />
+    <mat-error *ngIf="eventForm.get('title')?.invalid">Title is required</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill" class="full-width">
+    <mat-label>Description</mat-label>
+    <textarea matInput formControlName="description"></textarea>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Start Date & Time</mat-label>
+    <input matInput [matDatepicker]="startPicker" formControlName="startDateTime" />
+    <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+    <mat-datepicker #startPicker></mat-datepicker>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>End Date & Time</mat-label>
+    <input matInput [matDatepicker]="endPicker" formControlName="endDateTime" />
+    <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+    <mat-datepicker #endPicker></mat-datepicker>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Recurrence</mat-label>
+    <mat-select formControlName="recurrenceType">
+        <mat-option *ngFor="let option of recurrenceOptions" [value]="option">
+        {{ option }}
+        </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Reminder</mat-label>
+    <input matInput [matDatepicker]="reminderPicker" formControlName="reminder" />
+    <mat-datepicker-toggle matSuffix [for]="reminderPicker"></mat-datepicker-toggle>
+    <mat-datepicker #reminderPicker></mat-datepicker>
+  </mat-form-field>
+
+  <div mat-dialog-actions>
+    <button mat-button type="button" (click)="close()">Cancel</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="eventForm.invalid">
+      Save
+    </button>
+  </div>
+</form>
